Fix spacing

--- a/scripts/css/app.css
+++ b/scripts/css/app.css
@@ -183,8 +183,9 @@ ul.slick-dots{
 }
 
 .loc-thumb {
-    margin-left: 10px;
-    margin-top: 21px;
+    margin-left: auto;
+    margin-right: auto;
+    display:block;
 }
 
 .loc-content {
